examples/eks-managed-node-group/ingress/axxialegal/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-axxialegal
  namespace: default
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/backend-protocol: HTTP
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/group.name: prod-alpha-07
    alb.ingress.kubernetes.io/success-codes: 200-399
    alb.ingress.kubernetes.io/ssl-redirect: '443'
    alb.ingress.kubernetes.io/healthcheck-path: /
    alb.ingress.kubernetes.io/healthcheck-protocol: HTTP
    alb.ingress.kubernetes.io/healthcheck-port: '80'
    alb.ingress.kubernetes.io/ssl-policy: ELBSecurityPolicy-TLS13-1-1-2021-06
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443}, {"HTTP":80}]'
    alb.ingress.kubernetes.io/target-group-attributes: deregistration_delay.timeout_seconds=30
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:975049889333:certificate/c15e0b15-0d24-4989-add1-0e2799e671fe
spec:
  ingressClassName: alb
  rules:
  - host: chat.axxialegal.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: chatwoot
            port:
              number: 3000
  - host: landing.axxialegal.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: landaxxia-prod-svc
            port:
              number: 80
  - host: crm.axxialegal.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: axxia-vt-service
            port:
              number: 80
  - host: odoo.axxialegal.com
    http:
      paths:
      - path: /longpolling
        pathType: Prefix
        backend:
          service:
            name: odoo-longpool
            port:
              number: 8072
      - path: /websocket
        pathType: Prefix
        backend:
          service:
            name: odoo-longpool
            port:
              number: 8072
      - path: /
        pathType: Prefix
        backend:
          service:
            name: odoo-prod
            port:
              number: 80
